# reactos

base/services/: CMakeLists.txt
base/system/smss/: pagefile.c
boot/bootdata/: hivesft.inf  hivesys.inf  txtsetup.sif
dll/win32/: CMakeLists.txt
drivers/: CMakeLists.txt
drivers/bus/: CMakeLists.txt
drivers/hid/: CMakeLists.txt
drivers/input/: CMakeLists.txt
drivers/network/dd/: CMakeLists.txt
drivers/processor/processr/: cpu.inf
drivers/storage/port/: CMakeLists.txt
drivers/storage/port/vioscsi/: CMakeLists.txt  trace.h
drivers/usb/: CMakeLists.txt
drivers/usb/usbxhci/: roothub.c  usbxhci.c
drivers/wdm/audio/: CMakeLists.txt
drivers/wdm/audio/backpln/portcls/: pin_wavecyclic.cpp
drivers/wdm/audio/drivers/sb16/: CMakeLists.txt
media/fonts/: CMakeLists.txt
media/inf/: acpi.inf  usbport.inf
media/themes/: CMakeLists.txt
ntoskrnl/io/iomgr/: driver.c
ntoskrnl/io/pnpmgr/: devnode.c
ntoskrnl/kd64/: kdprint.c
ntoskrnl/mm/ARM3/: procsup.c
sdk/include/reactos/drivers/usbport/: usbmport.h
sdk/tools/spec2def/: spec2def.c
win32ss/drivers/miniport/: CMakeLists.txt
win32ss/drivers/miniport/qxldod/: BaseObject.cpp  BaseObject.h  CMakeLists.txt  QxlDod.cpp  QxlDod.h  WppTrace.h  driver.cpp  driver.h  qxldod.vcxproj  resource.h
win32ss/printing/: CMakeLists.txt
win32ss/printing/base/: CMakeLists.txt
